# rosbridge2cpp

./: CMakeLists.txt  build.sh  clear.sh
Release/install/include/: types.h
Release/install/include/client/: socket_tcp_connection.h
Release/install/include/messages/: rosbridge_msg.h
Release/install/lib/: libbson-1.0.so.1  libbson-1.0.so.1.5.3
Release/install/lib/pkgconfig/: libbson-1.0.pc
include/: ros_service.h  ros_topic.h
include/client/: socket_tcp_connection.h  socket_tcp_connection.h.in
src/: ros_bridge.cpp
src/client/: client.cpp  socket_tcp_connection.cpp
test/: CMakeLists.txt  build.sh
